add search component for shop
