# web_api/storage/api-docs/api-docs.json
@@ -905,6 +905,68 @@
                 ]
             }
         },
+        "/api/admin_shop/components/search_by_name": {
+            "get": {
+                "tags": [
+                    "shop"
+                ],
+                "summary": "search and return pagination components",
+                "operationId": "App\\Http\\Controllers\\ComponentController::searchByName",
+                "parameters": [
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "description": "search by name of component",
+                        "required": true,
+                        "example": "intel i5"
+                    },
+                    {
+                        "name": "component",
+                        "in": "query",
+                        "description": "name of component",
+                        "required": true,
+                        "example": "cpu"
+                    },
+                    {
+                        "name": "current_page",
+                        "in": "query",
+                        "description": "number of component",
+                        "required": false,
+                        "example": "10"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "number of pagination",
+                        "required": false,
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "please test it."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
         "/api/product/index": {
             "get": {
                 "tags": [
